Tela de login + sincronização

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -32,10 +32,14 @@
                     <i class="fa-solid fa-times fa-lg"></i>
                 </button>
             </div>
-            <div class="p-4">
+            <div class="p-4 space-y-4">
                 <button id="add-institution-btn" class="w-full bg-blue-600 text-white font-bold py-2 px-4 rounded-lg shadow-md hover:bg-blue-700 transition-colors flex items-center justify-center gap-2">
                     <i class="fa-solid fa-plus"></i>
                     <span>Adicionar Nova</span>
+                </button>
+                 <button id="logout-btn" class="w-full bg-red-600 text-white font-bold py-2 px-4 rounded-lg shadow-md hover:bg-red-700 transition-colors flex items-center justify-center gap-2">
+                    <i class="fa-solid fa-right-from-bracket"></i>
+                    <span>Sair</span>
                 </button>
             </div>
             <div id="institution-list" class="flex-grow overflow-y-auto p-2">
